samples/_failures_safe/1761357960_c8f25b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d9ca82a6.c: In function ‘main’:
./samples/SAFE/__tmp_d9ca82a6.c:138:5: error: ‘analyze’ undeclared (first use in this function)
  138 |     analyze
      |     ^~~~~~~
./samples/SAFE/__tmp_d9ca82a6.c:138:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_d9ca82a6.c:138:12: error: expected ‘;’ at end of input
  138 |     analyze
      |            ^
      |            ;
./samples/SAFE/__tmp_d9ca82a6.c:138:5: error: expected declaration or statement at end of input
  138 |     analyze
      |     ^~~~~~~
